Bumped openrewrite to 7.22.0 (#174)
- Ignore flaky tests
- Add todo and fixme
- Merge Boot 3 upgrade branch
- fix copyrights
- Rewritten MavenProjectParser
- Add new resource parser