@@ -31,42 +31,48 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.function.Consumer;
 
-@Component
-@RequiredArgsConstructor
+//@Component
+//@RequiredArgsConstructor
+@Deprecated
 public class RewriteMavenParserFactory {
 
-    private final MavenPomCacheProvider mavenPomCacheProvider;
-    private final ApplicationEventPublisher eventPublisher;
+//    private final MavenPomCacheProvider mavenPomCacheProvider;
+//    private final ApplicationEventPublisher eventPublisher;
+//    private JavaProvenanceMarkerFactory javaProvenanceMarkerFactory;
+//
+//    private final ResourceParser resourceParser;
 
     MavenProjectParser createRewriteMavenParser(Path absoluteProjectDir, RewriteExecutionContext rewriteExecutionContext) {
         Consumer<Throwable> onError = rewriteExecutionContext.getOnError();
         MavenArtifactDownloader downloader = new MavenArtifactDownloader(
-                new LocalMavenArtifactCache(Path.of(System.getProperty("user.home"), ".m2", "repository")),
-//                ReadOnlyLocalMavenArtifactCache.mavenLocal().orElse(
-//                        new LocalMavenArtifactCache(Paths.get(System.getProperty("user.home"), ".rewrite", "cache", "artifacts"))
-//                ),
+                ReadOnlyLocalMavenArtifactCache.mavenLocal().orElse(
+                        new LocalMavenArtifactCache(Paths.get(System.getProperty("user.home"), ".rewrite", "cache", "artifacts"))
+                ),
                 null,
                 onError
         );
         // rewriteExecutionContext.getMavenPomCache();
 
         MavenParser.Builder mavenParserBuilder = MavenParser.builder()
-                .cache(getPomCache())
                 .mavenConfig(absoluteProjectDir.resolve(".mvn/maven.config"));
 
-        MavenProjectParser mavenProjectParser = new MavenProjectParser(
-                downloader,
-                mavenParserBuilder,
-                JavaParser.fromJavaVersion(),
-                eventPublisher,
-                rewriteExecutionContext
-        );
-        return mavenProjectParser;
+//        MavenProjectParser mavenProjectParser = new MavenProjectParser(
+//                resourceParser,
+//                downloader,
+//                mavenParserBuilder,
+//                JavaParser.fromJavaVersion(),
+//                eventPublisher,
+//                javaProvenanceMarkerFactory,
+//                rewriteExecutionContext
+//        );
+//        return mavenProjectParser;
+        // FIXME #7
+        return null;
     }
 
-    private MavenPomCache getPomCache() {
-        return mavenPomCacheProvider.getPomCache();
-    }
+//    private MavenPomCache getPomCache() {
+//        return mavenPomCacheProvider.getPomCache();
+//    }
 
 
 }
